--- a/LinkLib/LinkLib.fsproj
+++ b/LinkLib/LinkLib.fsproj
@@ -9,4 +9,21 @@
     <Compile Include="Library.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Database.Collections.Generic" Version="2.0.3">
+      <GeneratePathProperty></GeneratePathProperty>
+    </PackageReference>
+    <PackageReference Include="AngleSharp" Version="0.16.1">
+      <GeneratePathProperty></GeneratePathProperty>
+    </PackageReference>
+    <PackageReference Include="AngleSharp.Css" Version="0.16.4">
+      <GeneratePathProperty></GeneratePathProperty>
+    </PackageReference>
+    <PackageReference Include="AngleSharp.Io" Version="0.16.0">
+      <GeneratePathProperty></GeneratePathProperty>
+    </PackageReference>
+    <PackageReference Include="AngleSharp.Js" Version="0.15.0">
+      <GeneratePathProperty></GeneratePathProperty>
+    </PackageReference>
+  </ItemGroup>
 </Project>
