--- a/LinkLib/LinkLib.fsproj
+++ b/LinkLib/LinkLib.fsproj
@@ -10,20 +10,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AngleSharp" Version="0.16.1">
-      <GeneratePathProperty></GeneratePathProperty>
-    </PackageReference>
-    <PackageReference Include="AngleSharp.Css" Version="0.16.4">
-      <GeneratePathProperty></GeneratePathProperty>
-    </PackageReference>
-    <PackageReference Include="AngleSharp.Io" Version="0.16.0">
-      <GeneratePathProperty></GeneratePathProperty>
-    </PackageReference>
-    <PackageReference Include="AngleSharp.Js" Version="0.15.0">
-      <GeneratePathProperty></GeneratePathProperty>
-    </PackageReference>
+    <PackageReference Include="FSharp.Data" Version="4.2.8" />
     <PackageReference Include="Microsoft.Database.Collections.Generic" Version="2.0.3">
       <GeneratePathProperty></GeneratePathProperty>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="6.0.4" />
   </ItemGroup>
 </Project>
