--- a/LinkLib/LinkLib.fsproj
+++ b/LinkLib/LinkLib.fsproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.Data" Version="4.2.8" />
+    <PackageReference Include="AngleSharp" Version="1.0.0-alpha-844" />
     <PackageReference Include="Microsoft.Database.Collections.Generic" Version="2.0.3">
       <GeneratePathProperty></GeneratePathProperty>
     </PackageReference>
